--- a/template-adder.html
+++ b/template-adder.html
@@ -13,6 +13,7 @@
 
             _handleNewTemplate: function() {
                 this.set('route.path', '/templates/edit/');
+                window.location.reload();
             }
         });
     </script>
